[package]
name = "vc64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.16"
bit-array = "0.4.4"
typenum = "1.15.0"

[profile.dev.package.'*']
opt-level = 3

[build-dependencies]
nasm-rs = "0.2.4"